--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
+/* PHONE FRAME */
+.container {
+  height: 80vh;
+  width: auto;
+}
+
+.phone,
+.phone img {
+  height: 100%;
+}
+
+.phone {
+  position: relative;
+}
+
+.phone .notch-container {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100px;
+}
+
+.phone .notch-container .notch {
+  width: 20vh;
+  height: 4.25vh;
+  margin: 0 auto;
+  background-color: #111;
+  border-bottom-left-radius: 2.334vh;
+  border-bottom-right-radius: 2.334vh;
+}
+
+.phone img {
+  display: block;
+  border: 1.334vh solid #111;
+  border-radius: 4.5vh;
+}
