--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,3 +48,99 @@
   width: 100%;
   background: radial-gradient(70px 70px at bottom, transparent 50%, white 51%);
 }
+
+
+/* PROGRESS */
+.custom-progress {
+  text-align: center;
+  border-radius: 16px;
+  overflow: hidden;
+  @apply w-full h-[40px] rounded-lg border-primary-softblack border-2;
+}
+.custom-progress::-webkit-progress-value {
+  
+  height: 30px;
+  transition: width 0.5;
+  @apply bg-primary-green
+}
+
+.custom-progress::-webkit-progress-bar {
+  background-color: white;
+}
+
+.custom-progress[value]::-webkit-progress-value {
+  transition: width 0.5s;
+}
+
+.animate-width {
+  animation-duration: 0.5s;
+  animation-name: animate-width;
+  animation-timing-function: linear;
+  overflow: hidden;
+}
+
+.animate-scale {
+  animation-duration: 0.5s;
+  animation-name: animate-scale;
+  animation-timing-function: ease-in;
+  animation-fill-mode: both;
+}
+.animate-scale-hide {
+  animation-duration: 0.2s;
+  animation-name: animate-scale-hide;
+  animation-timing-function: ease-out;
+  animation-fill-mode: both;
+}
+
+.animate-opacity {
+  animation-duration: 0.2s;
+  animation-name: animate-opacity;
+  animation-timing-function: ease-in;
+}
+
+@keyframes animate-width {
+  0% {
+    opacity: 0;
+    width: 0;
+  }
+
+  100% {
+    opacity: 1;
+    width: 100%;
+  }
+}
+
+@keyframes animate-scale {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes animate-scale-hide {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+}
+
+@keyframes animate-opacity {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
